ZIG-937: Fix table background for dark mode.

--- a/src/components/CustomFilters/CustomFilters.scss
+++ b/src/components/CustomFilters/CustomFilters.scss
@@ -65,3 +65,9 @@
     }
   }
 }
+
+[data-theme="dark"] {
+  .customFilters {
+    background: transparent;
+  }
+}
