--- a/src/components/ThemeSwitcher/ThemeSwitcher.scss
+++ b/src/components/ThemeSwitcher/ThemeSwitcher.scss
@@ -1,5 +1,5 @@
 .themeSwitcher {
-  border: solid 1px $var(--border-color);
+  border: solid 1px var(--border-color);
   border-radius: 20px;
   overflow: hidden;
   width: fit-content;
