--- a/src/components/TraderCard/TraderCardBody/TraderCardBody.scss
+++ b/src/components/TraderCard/TraderCardBody/TraderCardBody.scss
@@ -119,11 +119,11 @@
   .traderCardBody {
     .actionsWrapper {
       &.positive {
-        background: linear-gradient(180deg, $darkGreenChartBottom 0%, $darkChartBottom 100%);
+        background: linear-gradient(180deg, $darkGreenChartBottom 0%, $lightBlackBackground 100%);
       }
 
       &.negative {
-        background: linear-gradient(180deg, $darkRedChartBottom 0%, $darkChartBottom 100%);
+        background: linear-gradient(180deg, $darkRedChartBottom 0%, $lightBlackBackground 100%);
       }
     }
   }
